[gd_scene load_steps=22 format=2]

[ext_resource path="res://font/Brightly Crush Shine.otf" type="DynamicFontData" id=1]
[ext_resource path="res://images/heartbar.png" type="Texture" id=2]
[ext_resource path="res://images/bkgbar.png" type="Texture" id=3]
[ext_resource path="res://images/livebar-1.png.png" type="Texture" id=4]
[ext_resource path="res://images/redSta.png" type="Texture" id=5]
[ext_resource path="res://images/musicOn.png" type="Texture" id=6]
[ext_resource path="res://images/musicStop.png" type="Texture" id=7]
[ext_resource path="res://menu.gd" type="Script" id=8]
[ext_resource path="res://images/backToStart.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.376471, 0.254902, 0.968627, 0.411765 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 6 )
region_rect = Rect2( -6, 0.589001, 251, 202.918 )
margin_left = 12.0
margin_right = 13.0
margin_top = 22.0
margin_bottom = 14.0

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 6 )
region_rect = Rect2( 6, 8.034, 220, 184.966 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 202, 193 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 7 )
region_rect = Rect2( -18, -5.521, 233, 206.521 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 200, 191 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 200, 191 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 9 )
region_rect = Rect2( -10, -16, 241, 217.664 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 200, 191 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 200, 191 )

[node name="Panel" type="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -412.0
margin_right = 412.0
margin_bottom = 65.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 580.0
margin_top = -19.0
margin_right = 669.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 2 )
text = "points: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="progressBar" type="TextureProgress" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -118.5
margin_right = 234.0
margin_bottom = 265.5
rect_scale = Vector2( 0.7, 0.6 )
texture_under = ExtResource( 3 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sta01" type="Sprite" parent="progressBar"]
position = Vector2( 130, 220 )
texture = ExtResource( 5 )

[node name="sta02" type="Sprite" parent="progressBar"]
position = Vector2( 176, 220 )
texture = ExtResource( 5 )

[node name="sta03" type="Sprite" parent="progressBar"]
position = Vector2( 225, 220 )
texture = ExtResource( 5 )

[node name="sta04" type="Sprite" parent="progressBar"]
position = Vector2( 270, 220 )
texture = ExtResource( 5 )

[node name="sta05" type="Sprite" parent="progressBar"]
position = Vector2( 315, 220 )
texture = ExtResource( 5 )

[node name="sta06" type="Sprite" parent="progressBar"]
position = Vector2( 360, 220 )
texture = ExtResource( 5 )

[node name="pointsShow" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -154.0
margin_top = -22.5
margin_right = -134.0
margin_bottom = 22.5
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playSound" type="Button" parent="."]
margin_left = 180.0
margin_top = 10.0
margin_right = 230.0
margin_bottom = 60.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="stopSound" type="Button" parent="."]
margin_left = 100.0
margin_top = 10.0
margin_right = 150.0
margin_bottom = 60.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backToStartScene" type="Button" parent="."]
margin_left = 25.0
margin_top = 10.0
margin_right = 75.0
margin_bottom = 60.0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="playSound" to="." method="_on_playSound_pressed"]
[connection signal="pressed" from="stopSound" to="." method="_on_stopSound_pressed"]
[connection signal="pressed" from="backToStartScene" to="." method="_on_backToStartScene_pressed"]
